/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.14/samples
 * This project uses @Incubating APIs which are subject to change.
 */

allprojects {
    apply {
        plugin('java')
    }

    repositories {
        mavenCentral()
        mavenLocal()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    sourceSets {
        jmh {
            compileClasspath += sourceSets.test.runtimeClasspath
            runtimeClasspath += sourceSets.test.runtimeClasspath
        }
    }
}

subprojects {
    group = "com.lazy.pegasus"
    version = "1.0-SNAPSHOT"

    dependencies {
        implementation 'org.slf4j:slf4j-api:2.0.17'
        implementation 'ch.qos.logback:logback-classic:1.5.18'

        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'


        jmhCompileOnly project
        jmhCompileOnly 'org.openjdk.jmh:jmh-core:1.37'
        jmhCompileOnly 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
        jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(Test.class).tap {
        configureEach {
            jvmArgs("-XX:+EnableDynamicAgentLoading")
        }
    }

}